--- a/index.html
+++ b/index.html
@@ -3,9 +3,48 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+    <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="src/styles.css" />
     <title>Weather Forecast</title>
 </head>
 <body>
+    <div class="weather-app">
+        <header>
+            <form class="search-form" id="search-form">
+                <input
+                type="search"
+                placeholder="Enter a city.."
+                required
+                id="search-form-input"
+                class="search-form-input"
+                />
+                <input type="submit" value="search" class="search-form-button" />
+            </form>
+        </header>
+        <main>
+            <div class="weather-app-data">
+                <div>
+                    <h1 class="weather-app-city" id="city">Paris</h1>
+                    <p class="weather-app-details">
+                        Tuesday 14:49, scattered clouds
+                        <br />
+                        Humidity: <strong>66%</strong>, Wind: <strong>3.13km/h</strong>
+                    </p>
+                </div>
+                <div class="weather-app-temperature-container">
+                    <div class="weather-app-icon">⛅</div>
+                    <div class="weather-app-temperature">12</div>
+                    <div class="weather-app-unit">°C</div>
+                </div>
+            </div>
+        </main>
+    </div>
     <footer>
         Coded by
         <a href="https://github.com/yasmeencardenas" target="_blank"> Yasmeen</a>,
