--- a/index.html
+++ b/index.html
@@ -53,5 +53,6 @@
         and website hosted
         <a href="https://main--tiny-baklava-4ce490.netlify.app/" target="_blank">on Netlify</a>
     </footer>
+    <script src="src/index.jx"></script>
 </body>
 </html>
