--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       rel="stylesheet"
     />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
-    <link rel="stylesheet" href="src/styles.css" />
+    <link rel="stylesheet" href="src/index.css" />
     <script src="https://cdn.jsdelivr.net/npm/axios@1.1.2/dist/axios.min.js"></script>
     <title>Weather Forecast</title>
 </head>
@@ -54,6 +54,6 @@
         and website hosted
         <a href="https://main--tiny-baklava-4ce490.netlify.app/" target="_blank">on Netlify</a>
     </footer>
-    <script src="src/index.jx"></script>
+    <script src="src/index.js"></script>
 </body>
 </html>
