--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
         <a href="https://github.com/yasmeencardenas" target="_blank"> Yasmeen</a>,
         coded hosted on
         <a href="https://github.com/yasmeencardenas/shecodes-week7-project" target="_blank">GitHub</a>
-        and website hosted
-        <a href="https://main--tiny-baklava-4ce490.netlify.app/" target="_blank">on Netlify</a>
+        and website hosted on 
+        <a href="https://main--tiny-baklava-4ce490.netlify.app/" target="_blank">Netlify</a>
     </footer>
     <script src="src/index.js"></script>
 </body>
