--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
         </main>
     </div>
     <footer>
-        Coded by
+        This project was coded by
         <a href="https://github.com/yasmeencardenas" target="_blank"> Yasmeen</a>,
-        coded hosted on
-        <a href="https://github.com/yasmeencardenas/shecodes-week7-project" target="_blank">GitHub</a>
-        and website hosted on 
-        <a href="https://main--tiny-baklava-4ce490.netlify.app/" target="_blank">Netlify</a>
+        is
+        <a href="https://github.com/yasmeencardenas/shecodes-week7-project" target="_blank"> open-sourced on GitHub</a>
+        and 
+        <a href="https://main--tiny-baklava-4ce490.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
     <script src="src/index.js"></script>
 </body>
